--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Test triggers
-        run: echo "The name of the docker image is ${{ github.repository }}"
+        run: echo "The name of the docker image is ${{ github.repository##*/ }}"
