--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,6 @@ on:
   workflow_call:
   workflow_dispatch:
   push:
-    branches-ignore:
-      - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   echo_rep_n:
@@ -15,4 +10,4 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Test triggers
-        run: echo "The name of the docker image is $(echo ${{ github.repository }} | cut -d '/' -f 2)"
+        run: echo "${GITHUB_REPOSITORY}"
