--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Test triggers
-        run: echo "${GITHUB_REPOSITORY}"
+        run: echo $GITHUB_REPOSITORY | cut -d '/' -f 2
