--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
 env:
-  rep_name: $GITHUB_REPOSITORY | cut -d '/' -f 2
+  rep_name: echo $GITHUB_REPOSITORY | cut -d '/' -f 2
 jobs:
   echo_rep_n:
     name: Test triggers
