get rep name test 7

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,11 @@ on:
   workflow_dispatch:
   push:
 env:
-  rep_name: echo $GITHUB_REPOSITORY | cut -d '/' -f 2
+  REP_NAME: "echo $GITHUB_REPOSITORY | cut -d '/' -f 2"
 jobs:
   echo_rep_n:
     name: Test triggers
     runs-on: ubuntu-22.04
     steps:
       - name: Test triggers
-        run: echo $rep_name
+        run: echo $REP_NAME
