get rep name test 8

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,15 @@ on:
   workflow_dispatch:
   push:
 env:
-  REP_NAME: "echo $GITHUB_REPOSITORY | cut -d '/' -f 2"
+  REP_NAME1: echo $GITHUB_REPOSITORY | cut -d '/' -f 2
+  REP_NAME2: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}
 jobs:
   echo_rep_n:
     name: Test triggers
     runs-on: ubuntu-22.04
     steps:
-      - name: Test triggers
-        run: echo $REP_NAME
+      - run: echo $REP_NAME1
+      - run: echo $REP_NAME2
+      - run: echo ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}
+      - run: echo $GITHUB_REPOSITORY | cut -d '/' -f 2
+
