--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,9 @@ on:
   workflow_dispatch:
   push:
 env:
-  REP_NAME1: echo $GITHUB_REPOSITORY | cut -d '/' -f 2
-  REP_NAME2: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}
+  REP_NAME1: $GITHUB_REPOSITORY | cut -d '/' -f 2
+  REP_NAME2: ${{ github.repository }} | cut -d '/' -f 2
+  REP_NAME3: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}
 jobs:
   echo_rep_n:
     name: Test triggers
@@ -13,6 +14,7 @@ jobs:
     steps:
       - run: echo $REP_NAME1
       - run: echo $REP_NAME2
+      - run: echo $REP_NAME3
       - run: echo ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}
       - run: echo $GITHUB_REPOSITORY | cut -d '/' -f 2
 
