--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
   push:
 env:
   REP_NAME1: $GITHUB_REPOSITORY | cut -d '/' -f 2
-  REP_NAME2: ${{ github.repository }} | cut -d '/' -f 2
+  REP_NAME2: (echo ${{ github.repository }}) | cut -d '/' -f 2
   REP_NAME3: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}
 jobs:
   echo_rep_n:
