--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,5 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Create Docker Image Name
-        run: echo "REP_NAME=${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
+        run: echo "REP_NAME=${{ secrets.DOCKERHUB_USERNAME }}/${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
       - run: echo $REP_NAME
-
-      - run: echo ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}
-      - run: echo $GITHUB_REPOSITORY | cut -d '/' -f 2
-      - run: echo ${{ github.repository }} | cut -d '/' -f 2
