--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Create Docker Image Name
-        run: echo "REP_NAME=${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }} | cut -d '/' -f 2" >> $GITHUB_ENV
+        run: echo "REP_NAME=${{ secrets.DOCKERHUB_USERNAME }}/${GITHUB_REPOSITORY##*/}"
       - run: echo $REP_NAME
 
       - name: Create Docker Image Name 2
