--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,10 @@ jobs:
         run: echo $IMAGE_NAME
       - name: pull name
         run: echo ${{ github.event.pull_request.number }}
+      - name: Date
+        run: echo ${GITHUB_RUN_STARTED_AT}
+      - name: ID
+        run: echo ${GITHUB_RUN_ID}
 
 
 
