--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,12 +12,11 @@ jobs:
         run: echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/${GITHUB_REPOSITORY##*/}" >> $GITHUB_ENV
       - name: tra-ta-ta
         run: echo $IMAGE_NAME
-      - name: pull name
-        run: echo ${{ github.event.pull_request.number }}
-      - name: Date
-        run: echo ${GITHUB_RUN_STARTED}
-      - name: ID
-        run: echo ${GITHUB_RUN_ID}
 
+      - name: Set Commit Tag
+        run: echo "COMMIT_SHA=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
+
+      - name: tra-ta-ta-22
+        run: echo $COMMIT_SHA
 
 
