--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   docker:
-    uses: Srmrlt/Action-test/.github/workflows/docker.yml@actions
+    uses: Srmrlt/Action-test/.github/workflows/docker.yml@main
 #    with:
 #      dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
 #      dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
