--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,13 +2,13 @@ name: Docker image build
 on:
   workflow_dispatch:
   workflow_call:
-#    inputs:
-#      dockerhub_username:
-#        required: true
-#        type: string
-#      dockerhub_token:
-#        required: true
-#        type: string
+    inputs:
+      dockerhub_username:
+        required: true
+        type: string
+      dockerhub_token:
+        required: true
+        type: string
 
 jobs:
   docker_image:
@@ -23,7 +23,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#          username: ${{ inputs.dockerhub_username }}
-#          password: ${{ inputs.dockerhub_token }}
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ inputs.dockerhub_username }}
+          password: ${{ inputs.dockerhub_token }}
